--- a/index.html
+++ b/index.html
@@ -90,21 +90,25 @@
             <h2 class="team">Наша команда</h2>
             <ul class="list">
                 <li>
-                    <img src="images/team/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260"></li>
+                    <img src="images/team/igor.jpg" alt="Ігор Дем'яненко" width="270" height="260">
                     <h3 class="names">Ігор Дем'яненко</h3>
                     <p class="jobs">Product Designer</p>
+                    </li>
                 <li>
-                    <img src="images/team/repinaolga.jpg" alt="Ольга Рєпіна" width="270" height="260"></li>
+                    <img src="images/team/repinaolga.jpg" alt="Ольга Рєпіна" width="270" height="260">
                     <h3 class="names">Ольга Рєпіна</h3>
                     <p class="jobs">Frontend Developer</p>
+                    </li>
                 <li>
-                    <img src="images/team/mikola.jpg" alt="Микола Тарасов" width="270" height="260"></li>
+                    <img src="images/team/mikola.jpg" alt="Микола Тарасов" width="270" height="260">
                     <h3 class="names">Микола Тарасов</h3>
                     <p class="jobs">Marketing</p>
+                    </li>
                 <li>
-                    <img src="images/team/michael.jpg" alt="Михайло Єрмаков" width="270" height="260"></li>
+                    <img src="images/team/michael.jpg" alt="Михайло Єрмаков" width="270" height="260">
                     <h3 class="names">Михайло Єрмаков</h3>
                     <p class="jobs">UI Designer</p>
+                    </li>
                     
             </ul>
     </section>
