--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </a>
 <ul class="list">
     <li class="items">
-        <a class="menu-link link" href="./index.html">Студія</a>
+        <a class="link studio" href="./index.html">Студія</a>
     </li>
     <li class="items">
         <a class="menu-link link" href="./portfolio.html">Портфоліо</a>
@@ -32,11 +32,11 @@
 </nav>
 <ul class="list">
    <li>
-<a class=" link feedback" href="tel:+380961111111">+38 096 111 11 11</a>
+<a class=" link feedback-header" href="tel:+380961111111">+38 096 111 11 11</a>
 </li>
 
     <li>
-<a class="link feedback" href="mailto:info@devstudio.com">info@devstudio.com</a>
+<a class="link feedback-header" href="mailto:info@devstudio.com">info@devstudio.com</a>
 </li>
 
 </ul>
@@ -44,7 +44,7 @@
     </header>
     <main>
 
-    <section>
+    <section class="main-section-color">
             <h1 class="main-text">Ефективні рішення для<br />вашого бізнесу</h1>
 
                 <button class="main-button" type="button">Замовити послугу
@@ -121,7 +121,7 @@
             <address>
             <ul class="list">
                 <li class="">
-                    <a class="link feedback" href="https://goo.gl/maps/wqpZzDvNSCtZP2SS6" 
+                    <a class="link feedback-adress" href="https://goo.gl/maps/wqpZzDvNSCtZP2SS6" 
                     target="_blank" 
                     rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
                 </li>
