--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
         <a class="menu-link link" href="./index.html">Студія</a>
     </li>
     <li>
-        <a class="menu-link link" href="">Портфоліо</a>
+        <a class="link portfolio" href="">Портфоліо</a>
     </li>
     <li>
         <a class="menu-link link" href="">Контакти</a>
@@ -32,11 +32,11 @@
 </nav>
 <ul class="list">
    <li>
-<a class="link feedback" href="tel:+380961111111">+38 096 111 11 11</a>
+<a class="link feedback-header" href="tel:+380961111111">+38 096 111 11 11</a>
 </li>
 
     <li>
-<a class="link feedback" href="mailto:info@devstudio.com">info@devstudio.com</a>
+<a class="link feedback-header" href="mailto:info@devstudio.com">info@devstudio.com</a>
 </li>
 
 </ul>
@@ -66,51 +66,69 @@
     </ul>
     
     <ul class="list">
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/notebook.jpg" alt="notebook" width="370" height="294">
             <h2 class="portfolio-headers">Технокряк</h2>
             <p class="headers-veiw">Веб-сайт</p>
         </li>
+    </a>
+    <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/basketball.jpg" alt="basketball" width="370" height="294">
             <h2 class="portfolio-headers">Постер New Orlean vs Golden Star</h2>
             <p class="headers-veiw">Дизайн</p>
         </li>
+    </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/seafood.jpg" alt="restaurant" width="370" height="294">
             <h2 class="portfolio-headers">Ресторан Seafood</h2>
             <p class="headers-veiw">Додаток</p>
         </li>
+    </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/headphones.jpg" alt="headphones" width="370" height="294">
             <h2 class="portfolio-headers">Проєкт Prime</h2>
             <p class="headers-veiw">Маркетинг</p>
         </li>
+    </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/boxes.jpg" alt="boxes" width="370" height="294">
             <h2 class="portfolio-headers">Проєкт Boxes</h2>
             <p class="headers-veiw">Додаток</p>
         </li>
+    </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/imac.jpg" alt="imac" width="370" height="294">
             <h2 class="portfolio-headers">Inspiration has no Borders</h2>
             <p class="headers-veiw">Веб-сайт</p>
         </li>
+        </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/newspapper.jpg" alt="newspapper" width="370" height="294">
             <h2 class="portfolio-headers">Видання Limited Edition</h2>
             <p class="headers-veiw">Дизайн</p>
         </li>
+        </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/labeltag.jpg" alt="labeltag" width="370" height="294">
             <h2 class="portfolio-headers">Проєкт LAB</h2>
             <p class="headers-veiw">Маркетинг</p>
         </li>
+        </a>
+        <a href="" class="link-potfolio">
         <li>
             <img src="./images/projects/typing.jpg" alt="typing" width="370" height="294">
             <h2 class="portfolio-headers">Growing Business</h2>
             <p class="headers-veiw">Додаток</p>
         </li>
+    </a>
     </ul>
 </section>
 </main>
@@ -123,10 +141,10 @@
     <a class="footer-logo logo"  href="./index.html" lang="en">
         <span>Web</span>Studio
     </a>
-    <address>
+        <address>
         <ul class="list">
             <li class="">
-                <a class="link feedback" href="https://goo.gl/maps/wqpZzDvNSCtZP2SS6" 
+                <a class="link feedback-adress" href="https://goo.gl/maps/wqpZzDvNSCtZP2SS6" 
                 target="_blank" 
                 rel="noopener noreferrer">м. Київ, пр-т Лесі Українки, 26</a>
             </li>
