--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
             </a>
 <ul class="list">
     <li class="items">
+        <a href="">
+            
+        </a>
+        <a href="">
+
+        </a><a href="">
+
+        </a>
+        <a href="">
+
+        </a>
         <a class="link studio" href="./index.html">Студія</a>
     </li>
     <li class="items">
