--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
 
     <section class="main-section-color">
-            <h1 class="main-text">Ефективні рішення для<br />вашого бізнесу</h1>
+            <h1 class="main-text">Ефективні рішення для<br/>вашого бізнесу</h1>
 
                 <button class="main-button" type="button">Замовити послугу
                 </button>
@@ -76,13 +76,13 @@
             <h2 class="team">Чим ми займаємося</h2>   
             <ul class="list">
                 <li class="items">
-                  <img src="images/work/type.jpg" alt="друкує" width="370" height="294"/>  
+                  <img src="images/work/type.jpg" alt="друкує" width="370" height="294">  
                 </li>
                 <li class="items">
-                    <img src="images/work/telefone.jpg" alt="звіряє" width="370" height="294"/>  
+                    <img src="images/work/telefone.jpg" alt="звіряє" width="370" height="294">  
                 </li>
                 <li class="items">
-                    <img src="images/work/ipad.jpg" alt="малює" width="370" height="294"/>  
+                    <img src="images/work/ipad.jpg" alt="малює" width="370" height="294">  
                 </li>
             </ul>   
     </section>
