--- a/portfolio.html
+++ b/portfolio.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+
+
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
@@ -80,7 +83,6 @@
             <p class="headers-veiw">Дизайн</p>
             </a>
         </li>
-        <a href="" class="link-potfolio">
         <li>
             <a href="" class="link-potfolio">
             <img src="./images/projects/seafood.jpg" alt="restaurant" width="370" height="294">
@@ -88,7 +90,6 @@
             <p class="headers-veiw">Додаток</p>
             </a>
         </li>
-        <a href="" class="link-potfolio">
         <li>
             <a href="" class="link-potfolio">
             <img src="./images/projects/headphones.jpg" alt="headphones" width="370" height="294">
