--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
 
     <section class="main-section-color">
-            <h1 class="main-text">Ефективні рішення для<br/>вашого бізнесу</h1>
+            <h1 class="main-text">Ефективні рішення для<br>вашого бізнесу</h1>
 
                 <button class="main-button" type="button">Замовити послугу
                 </button>
